# laboratory-backend

./: .env  Cargo.toml
migrations/: 20260128023929_init_schema.sql  20260128205811_update_schema_v2.sql
src/: main.rs  openapi.rs
src/handlers/: auth_handler.rs  mod.rs  order_handler.rs  patient_handler.rs  result_handler.rs  test_handler.rs
src/models/: mod.rs  order.rs  patient.rs  result.rs  test.rs  user.rs
src/routes/: auth_routes.rs  mod.rs  order_routes.rs  patient_routes.rs  result_routes.rs  test_routes.rs
