[package]
name = "laboratory-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15"
rust_decimal = "1.40.0"
tokio = { version = "1.49", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono", "bigdecimal", "rust_decimal" ] }
env_logger = "0.11.8"
log = "0.4.29"
actix-cors = "0.7.1"
